ADR-013 & validator SPI
